# apis-client

./: README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
py_utils/: .gitignore  README.md  get_sdl.py  parse.py  requirements.txt  sdl_schema.py
py_utils/server/: app.py  schema.py
src/: App.jsx  app.jsx  main.jsx
src/pages/colors/: ColorsPage.jsx  ColorsPage.module.css  colorsPage.css  colorsPage.jsx
src/pages/colors/components/: ColorBox.jsx  colorBox.css  colorBox.jsx  colorBox.module.css
src/pages/components/: ComponentsPage.jsx
src/pages/fonts/: fontsPage.jsx
src/pages/home/: homePage.jsx
src/pages/layouts/: layoutsPage.jsx
src/styles/shared/: colors.css
