[tool.poetry]
name = "apis-client"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "apis_client"}]

[tool.poetry.dependencies]
python = "~3.12"
flask = "3.1.0"
pydantic = "2.11.4"
requests = "2.32.3"
strawberry-graphql = {version = "0.266.0", extras = ["cli"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
